--- a/page/home/pages/terminalUser/repairing/repairing.wxml
+++ b/page/home/pages/terminalUser/repairing/repairing.wxml
@@ -1,17 +1,17 @@
 <view class="page">
-    <view class="page__bd">
-      <scroll-view scroll-y="true" class="container discovery" bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
-        <mp-cells>
-            <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="order" data-id="{{order.id}}" bindtap="clickOrder">
-                <view slot="title" style="position: relative;margin-right: 10px;">
-                  <image src="../../../../../imgs/icon/to_be_confirmed.png" style="width: 50px; height: 50px; display: block"/>
-                </view>
-                <view>{{order.programName}}</view>
-                <view>{{order.deviceName}}</view>
-                <view style="font-size: 13px;color: #888888;">设备位置:{{order.malfunctionLoc}}</view>
-                <view style="font-size: 13px;color: #888888;">报修时间:{{order.malfunctionDate}}</view>
-            </mp-cell>
-        </mp-cells>
-      </scroll-view>
-    </view>
+  <view class="page__bd">
+    <scroll-view scroll-y="true" class="container discovery" bindscrolltolower="lower" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+      <mp-cells>
+        <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="order" data-id="{{order.id}}" bindtap="clickOrder">
+          <view slot="title" class="mp-cell-title">
+            <image src="../../../../../imgs/icon/to_be_confirmed.png" class="mp-cell-image" />
+          </view>
+          <view>{{order.programName}}</view>
+          <view>{{order.deviceName}}</view>
+          <view class="mp-cell-view">设备位置:{{order.address_name}}</view>
+          <view class="mp-cell-view">报修时间:{{order.appointTime}}</view>
+        </mp-cell>
+      </mp-cells>
+    </scroll-view>
+  </view>
 </view>
