--- a/page/home/pages/terminalUser/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
+++ b/page/home/pages/terminalUser/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
@@ -19,14 +19,14 @@
   <view class="ctnt1 placehold" hidden="{{currentNavtab==1 ? '' : true}}">
     <view class="page__bd">
       <mp-cells ext-class="my-cells">
-        <mp-cell value="项目编号" footer="{{orderInfo.projectId}}"></mp-cell>
-        <mp-cell value="项目名称" footer="{{orderInfo.projectId}}"></mp-cell>
-        <mp-cell value="故障程度" footer="{{orderInfo.level}}"></mp-cell>
-        <mp-cell value="故障等级" footer="{{orderInfo.projectId}}"></mp-cell>
-        <mp-cell value="故障类别" footer="{{orderInfo.projectId}}"></mp-cell>
-        <mp-cell value="故障描述" footer="{{orderInfo.projectId}}"></mp-cell>
-        <mp-cell value="报修人" footer="{{orderInfo.userId}}"></mp-cell>
-        <mp-cell value="联系电话" footer="{{orderInfo.call}}"></mp-cell>
+        <mp-cell value="项目编号" footer="{{orderInfo.projectId}}">{{orderInfo.projectId}}</mp-cell>
+        <mp-cell value="项目名称" footer="{{orderInfo.projectId}}">{{orderInfo.projectId}}</mp-cell>
+        <mp-cell value="故障程度" footer="{{orderInfo.level}}">{{orderInfo.level}}</mp-cell>
+        <mp-cell value="故障等级" footer="{{orderInfo.projectId}}">{{orderInfo.projectId}}</mp-cell>
+        <mp-cell value="故障类别" footer="{{orderInfo.projectId}}">{{orderInfo.projectId}}</mp-cell>
+        <mp-cell value="故障描述" footer="{{orderInfo.projectId}}">{{orderInfo.projectId}}</mp-cell>
+        <mp-cell value="报修人" footer="{{orderInfo.userId}}">{{orderInfo.userId}}</mp-cell>
+        <mp-cell value="联系电话" footer="{{orderInfo.call}}">{{orderInfo.call}}</mp-cell>
       </mp-cells>
     </view>
   </view>
