--- a/page/my/pages/aboutus/aboutus.wxml
+++ b/page/my/pages/aboutus/aboutus.wxml
@@ -1,2 +1,14 @@
 <!--page/my/pages/aboutus/aboutus.wxml-->
-<text>page/my/pages/aboutus/aboutus.wxml</text>
+<view class='container'>
+  <view class='contact-title'>
+    <text>{{aboutus}}</text>
+  </view>
+  <view class='contact-email'>
+    <view class='title'></view>
+    <text class='address' selectable='true'>duanby@ananops.com</text>
+  </view>
+  <view class='contact-bottom'>
+    <text class='create'>Created By ananops</text> 
+  </view>
+  
+</view>
