--- a/page/home/pages/terminalUser/repair/repair.wxml
+++ b/page/home/pages/terminalUser/repair/repair.wxml
@@ -1,6 +1,6 @@
 <view class="container">
   <view class="page-body">
-      <!--语音报修栏-->
+    <!--语音报修栏-->
     <!-- <view class="page-section">
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_switch">
@@ -26,259 +26,235 @@
       </block>
     </view> -->
     <!--选择项目栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">项目</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickChoosePro" value="{{programIndex}}" range="{{programNameList}}">
-              <view class="weui-input">{{programNameList[programIndex]}}</view>
-            </picker>
+    <view>
+      <view class="title-view">
+        <text>基础信息</text>
+      </view>
+
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">项目</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker bindchange="clickChoosePro" value="{{programIndex}}" range="{{programNameList}}">
+                <view class="weui-input">{{programNameList[programIndex]}}</view>
+              </picker>
+            </view>
           </view>
         </view>
       </view>
-    </view>
 
-     <!--选择服务商栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">服务商</view>
-          </view>
-          <view class="weui-cell__bd">
-            <!-- <picker bindchange="clickServiceProvider" value="{{serviceProviderIndex}}" range="{{serviceProviderList}}"> -->
+      <!--选择服务商栏-->
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">服务商</view>
+            </view>
+            <view class="weui-cell__bd">
+              <!-- <picker bindchange="clickServiceProvider" value="{{serviceProviderIndex}}" range="{{serviceProviderList}}"> -->
               <view class="weui-input">{{serviceProvider}}</view>
-            <!-- </picker> -->
+              <!-- </picker> -->
+            </view>
           </view>
         </view>
       </view>
-    </view>
 
-     <!--选择审核人-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">审核人</view>
-          </view>
-          <view class="weui-cell__bd">
-            <!-- <picker bindchange="clickChoosereviewer" value="{{reviewerIndex}}" range="{{reviewerList}}"> -->
+      <!--选择审核人-->
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">审核人</view>
+            </view>
+            <view class="weui-cell__bd">
+              <!-- <picker bindchange="clickChoosereviewer" value="{{reviewerIndex}}" range="{{reviewerList}}"> -->
               <view class="weui-input">{{reviewer}}</view>
-            <!-- </picker> -->
+              <!-- </picker> -->
+            </view>
           </view>
         </view>
       </view>
+
+      <!--联系电话栏-->
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">联系电话</view>
+            </view>
+            <view class="weui-cell__bd">
+              <input class="weui-input" type="number" value="{{phoneNumber}}" bindinput="setPhoneNumber" />
+            </view>
+          </view>
+        </view>
+      </view>
+
+      <!--日期选择器-->
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">预约时间</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="date" value="{{date}}" start="2015-09-01" end="2100-09-01" bindchange="bindDateChange">
+                <view class="weui-input">{{date}}</view>
+              </picker>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="time" value="{{time}}" start="09:01" end="21:01" bindchange="bindTimeChange">
+                <view class="weui-input">{{time}}</view>
+              </picker>
+            </view>
+          </view>
+        </view>
+      </view>
+
+      <!--故障定位栏-->
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">故障定位</view>
+            </view>
+            <view class="weui-cell__bd" bindtap="chooseLocation">
+              <view class="weui-input">{{mapLocation}}</view>
+            </view>
+          </view>
+        </view>
+      </view>
+
     </view>
 
-    <!--联系电话栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">联系电话</view>
-          </view>
-          <view class="weui-cell__bd">
-            <input class="weui-input" type="number" value="{{phoneNumber}}" bindinput="setPhoneNumber"/>
-          </view>
-        </view>
+    <view>
+      <view class="title-view">
+        <text>设备信息</text>
+        <!-- <image bindtap="adddevice" src="/imgs/others/add.png"></image>
+        <image bindtap="removedevice" src="/imgs/others/remove.png"></image> -->
       </view>
-    </view>
 
-    <!--日期选择器-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">预约时间</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker mode="date" value="{{date}}" start="2015-09-01" end="2100-09-01" bindchange="bindDateChange">
-              <view class="weui-input">{{date}}</view>
-            </picker>
-          </view>
-          <view class="weui-cell__bd">
-            <picker mode="time" value="{{time}}" start="09:01" end="21:01" bindchange="bindTimeChange">
-              <view class="weui-input">{{time}}</view>
-            </picker>
-          </view>
-        </view>
-      </view>
-    </view>
+      <view wx:for="{{deviceNum}}" wx:key="item">
 
-    <!--紧急程度栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">紧急程度</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickUrgentType" value="{{urgentTypeIndex}}" range="{{urgentTypeList}}">
-              <view class="weui-input">{{urgentTypeList[urgentTypeIndex]}}</view>
-            </picker>
+        <!--紧急程度栏-->
+        <view class="page-section">
+          <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_input">
+              <view class="weui-cell__hd">
+                <view class="weui-label">紧急程度</view>
+              </view>
+              <view class="weui-cell__bd">
+                <picker bindchange="clickUrgentType" value="{{urgentTypeIndex}}" range="{{urgentTypeList}}">
+                  <view class="weui-input">{{urgentTypeList[urgentTypeIndex]}}</view>
+                </picker>
+              </view>
+            </view>
           </view>
         </view>
-      </view>
-    </view>
 
-    <!--报修人栏-->
-    <!-- <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">报修人</view>
-          </view>
-          <view class="weui-cell__bd">
-            <view class="weui-input">{{repairer}}</view>
-          </view>
-        </view>
-      </view>
-    </view> -->
-    <!--单位栏-->
-    <!-- <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">单位</view>
-          </view>
-          <view class="weui-cell__bd">
-            <view class="weui-input">{{unit}}</view>
+        <!--故障类型栏-->
+        <view class="page-section">
+          <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_input">
+              <view class="weui-cell__hd">
+                <view class="weui-label">故障类型</view>
+              </view>
+              <view class="weui-cell__bd">
+                <picker bindchange="clickMalfunctionType" value="{{malfunctionTypeIndex}}" range="{{malfunctionTypeList}}">
+                  <view class="weui-input">{{malfunctionTypeList[malfunctionTypeIndex]}}</view>
+                </picker>
+              </view>
+            </view>
           </view>
         </view>
-      </view>
-    </view> -->
-    <!--故障类型栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">故障类型</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickMalfunctionType" value="{{malfunctionTypeIndex}}" range="{{malfunctionTypeList}}">
-              <view class="weui-input">{{malfunctionTypeList[malfunctionTypeIndex]}}</view>
-            </picker>
-          </view>
-        </view>
-      </view>
-    </view>
 
-    <!--选择设备栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">选择设备</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickChooseDev" value="{{deviceIndex}}" range="{{deviceList}}">
-              <view class="weui-input">{{deviceList[deviceIndex]}}</view>
-            </picker>
+        <!--选择设备栏-->
+        <view class="page-section">
+          <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_input">
+              <view class="weui-cell__hd">
+                <view class="weui-label">选择设备</view>
+              </view>
+              <view class="weui-cell__bd">
+                <picker bindchange="clickChooseDev" value="{{deviceIndex}}" range="{{deviceList}}">
+                  <view class="weui-input">{{deviceList[deviceIndex]}}</view>
+                </picker>
+              </view>
+            </view>
           </view>
         </view>
-      </view>
-    </view>
 
-        <!--故障名称栏-->
-    <!-- <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">故障名称</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickMalfunctionName" value="{{malfunctionNameIndex}}" range="{{malfunctionNameList}}">
-              <view class="weui-input">{{malfunctionNameList[malfunctionNameIndex]}}</view>
-            </picker>
+        <!--设备类型-->
+        <view class="page-section">
+          <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_input">
+              <view class="weui-cell__hd">
+                <view class="weui-label">设备类型</view>
+              </view>
+              <view class="weui-cell__bd">
+                <picker bindchange="clickDeviceType" value="{{deviceTypeIndex}}" range="{{deviceTypeList}}">
+                  <view class="weui-input">{{deviceTypeList[deviceTypeIndex]}}</view>
+                </picker>
+              </view>
+            </view>
           </view>
         </view>
-      </view>
-    </view> -->
 
-    <!--设备类型-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">设备类型</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickDeviceType" value="{{deviceTypeIndex}}" range="{{deviceTypeList}}">
-              <view class="weui-input">{{deviceTypeList[deviceTypeIndex]}}</view>
-            </picker>
+        <!--故障位置栏-->
+        <view class="page-section">
+          <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_input">
+              <view class="weui-cell__hd">
+                <view class="weui-label">故障位置</view>
+              </view>
+              <view class="weui-cell__bd">
+                <picker bindchange="clickMalfunctionLoc" value="{{malfunctionLocIndex}}" range="{{malfunctionLocList}}">
+                  <view class="weui-input">{{malfunctionLocList[malfunctionLocIndex]}}</view>
+                </picker>
+              </view>
+            </view>
           </view>
         </view>
-      </view>
-    </view>
 
-    <!--故障位置栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">故障位置</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickMalfunctionLoc" value="{{malfunctionLocIndex}}" range="{{malfunctionLocList}}">
-              <view class="weui-input">{{malfunctionLocList[malfunctionLocIndex]}}</view>
-            </picker>
-          </view>
-        </view>
-      </view>
-    </view>
-    <!--故障定位栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">故障定位</view>
-          </view>
-          <view class="weui-cell__bd" bindtap="chooseLocation">
-            <view class="weui-input">{{mapLocation}}</view>
-          </view>
-        </view>
-      </view>
-    </view>
 
-    <!--故障等级栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">故障等级</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickMalfunctionRank" value="{{malfunctionRankIndex}}" range="{{malfunctionRankList}}">
-              <view class="weui-input">{{malfunctionRankList[malfunctionRankIndex]}}</view>
-            </picker>
-          </view>
-        </view>
-      </view>
-    </view>
-
-    <!--故障描述栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">故障描述</view>
-          </view>
-          <view class="weui-cell__bd" bindtap="chooseDescribe">
-            <view wx:if="{{describe}}" class="weui-input">{{describe}}</view>
-            <view wx:else class="weui-input">{{textContent}}</view>
+        <!--故障等级栏-->
+        <view class="page-section">
+          <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_input">
+              <view class="weui-cell__hd">
+                <view class="weui-label">故障等级</view>
+              </view>
+              <view class="weui-cell__bd">
+                <picker bindchange="clickMalfunctionRank" value="{{malfunctionRankIndex}}" range="{{malfunctionRankList}}">
+                  <view class="weui-input">{{malfunctionRankList[malfunctionRankIndex]}}</view>
+                </picker>
+              </view>
+            </view>
           </view>
         </view>
-      </view>
-    </view>
 
-    <modal id="modal" hidden="{{hiddenmodalput}}" title="故障描述" confirm-text="提交" cancel-text="取消" bindcancel="cancel" bindconfirm="confirm">
-      <textarea placeholder="请输入信息详细故障描述" bindinput="describe" value="{{describe}}"></textarea>
-    </modal>
-    <!--附件栏-->
-    <!-- <view class="page-section">
+        <!--故障描述栏-->
+        <view class="page-section">
+          <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_input">
+              <view class="weui-cell__hd">
+                <view class="weui-label">故障描述</view>
+              </view>
+              <view class="weui-cell__bd" bindtap="chooseDescribe">
+                <view wx:if="{{describe}}" class="weui-input">{{describe}}</view>
+                <view wx:else class="weui-input">{{textContent}}</view>
+              </view>
+            </view>
+          </view>
+        </view>
+
+        <modal id="modal" hidden="{{hiddenmodalput}}" title="故障描述" confirm-text="提交" cancel-text="取消" bindcancel="cancel" bindconfirm="confirm">
+          <textarea placeholder="请输入信息详细故障描述" bindinput="describe" value="{{describe}}"></textarea>
+        </modal>
+        <!--附件栏-->
+        <!-- <view class="page-section">
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
           <view class="weui-cell__hd">
@@ -292,7 +268,11 @@
           </view>
         </view>
       </view> -->
-    <!-- </view> -->
+        <!-- </view> -->
+
+      </view>
+
+    </view>
 
     <!--提交-->
     <view class="page-section">
