--- a/page/home/pages/terminalUser/repairingOrderDetail/repairingOrderDetail.wxml
+++ b/page/home/pages/terminalUser/repairingOrderDetail/repairingOrderDetail.wxml
@@ -1,5 +1,5 @@
 <!-- 顶部tabbar -->
-<view class="top-tab flex-wrp flex-tab " >
+<view class="top-tab flex-wrp flex-tab ">
   <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:key="itemName" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
     {{itemName}}
   </view>
@@ -8,43 +8,46 @@
 <view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==0 ? '' : true}}">
     <view class="page__bd">
-        <mp-cells ext-class="my-cells">
-            <mp-cell value="设备编号" footer="{{}}"></mp-cell>
-            <mp-cell value="设备名称" footer="{{}}"></mp-cell>
-            <mp-cell value="设备位置" footer="{{}}"></mp-cell>
-            <mp-cell value="报修人" footer="{{}}"></mp-cell>
-            <mp-cell value="联系电话" footer="{{}}"></mp-cell>
-        </mp-cells>
+      <mp-cells ext-class="my-cells">
+        <mp-cell value="设备编号" footer="{{}}">{{}}</mp-cell>
+        <mp-cell value="设备名称" footer="{{}}"></mp-cell>
+        <mp-cell value="设备位置" footer="{{orderInfo.address_name}}">{{orderInfo.address_name}}</mp-cell>
+      </mp-cells>
     </view>
   </view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==1 ? '' : true}}">
     <view class="page__bd">
-        <mp-cells ext-class="my-cells">
-            <mp-cell value="故障程度" footer="{{}}"></mp-cell>
-            <mp-cell value="故障等级" footer="{{}}"></mp-cell>
-            <mp-cell value="故障类别" footer="{{}}"></mp-cell>
-            <mp-cell value="故障描述" footer="{{}}"></mp-cell>
-        </mp-cells>
+      <mp-cells ext-class="my-cells">
+        <mp-cell value="故障程度" footer="{{}}"></mp-cell>
+        <mp-cell value="故障等级" footer="{{}}"></mp-cell>
+        <mp-cell value="故障类别" footer="{{}}"></mp-cell>
+        <mp-cell value="故障描述" footer="{{}}"></mp-cell>
+        <mp-cell value="报修人" footer="{{orderInfo.userId}}">{{orderInfo.userId}}</mp-cell>
+        <mp-cell value="联系电话" footer="{{orderInfo.call}}">{{orderInfo.call}}</mp-cell>
+      </mp-cells>
     </view>
   </view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==2 ? '' : true}}">
     <view class="page__bd">
-        <mp-cells ext-class="my-cells">
-          
-        </mp-cells>
+      <mp-cells ext-class="my-cells">
+        <mp-cell value="服务商" footer="{{orderInfo.facilitatorId}}">{{orderInfo.facilitatorId}}</mp-cell>
+        <mp-cell value="维修工" footer="{{orderInfo.id}}">{{orderInfo.id}}</mp-cell>
+        <mp-cell value="维修建议" footer="{{orderInfo.suggestion}}">{{orderInfo.suggestion}}</mp-cell>
+        <mp-cell value="维修结果" footer="{{orderInfo.result}}">{{orderInfo.result}}</mp-cell>
+      </mp-cells>
     </view>
   </view>
   <view class="ctnt2 placehold" hidden="{{currentNavtab==3 ? '' : true}}">
     <view class="page__bd">
-        <mp-cells ext-class="my-cells">
-            <mp-cell value="单据状态" footer="{{}}"></mp-cell>
-            <mp-cell value="报修单号" footer="{{}}"></mp-cell>
-            <mp-cell value="审核人" footer="{{}}"></mp-cell>
-            <mp-cell value="审核意见" footer="{{}}"></mp-cell>
-            <mp-cell value="维修人员" footer="{{}}"></mp-cell>
-            <mp-cell value="计划时间" footer="{{}}"></mp-cell>
-            <mp-cell value="处理意见" footer="{{}}"></mp-cell>
-        </mp-cells>
+      <mp-cells ext-class="my-cells">
+        <mp-cell value="单据状态" footer="{{}}"></mp-cell>
+        <mp-cell value="报修单号" footer="{{}}"></mp-cell>
+        <mp-cell value="审核人" footer="{{}}"></mp-cell>
+        <mp-cell value="审核意见" footer="{{}}"></mp-cell>
+        <mp-cell value="维修人员" footer="{{}}"></mp-cell>
+        <mp-cell value="计划时间" footer="{{}}"></mp-cell>
+        <mp-cell value="处理意见" footer="{{}}"></mp-cell>
+      </mp-cells>
     </view>
   </view>
 </view>
