--- a/page/home/index.wxml
+++ b/page/home/index.wxml
@@ -147,8 +147,8 @@
 
 
 
-<!-- 
-    <view wx:if="{{userRole != null}}" class="page-section">
+
+    <view wx:if="{{allRepairerOrder != null}}" class="page-section">
       <view class="kind-list-item-hd">
         <view class="kind-list-text">待办事项</view>
         <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部待办事项</navigator>
@@ -156,10 +156,26 @@
       </view>
 
       <view class="page-body-line"></view>
+        <view class="page__bd">
+      <scroll-view scroll-y="true" class="container discovery" >
+        <mp-cells>
+            <mp-cell wx:for="{{allRepairerOrder}}" wx:for-item="order" wx:key="order" data-id="{{allRepairerOrder.id}}" bindtap="clickOrder">
+                <view slot="title" class="mp-cell-title">
+                  <image src="../../../../../imgs/icon/to_be_confirmed.png" class="mp-cell-image"/>
+                </view>
+                <view>{{allRepairerOrder.programName}}</view>
+                <view>{{allRepairerOrder.deviceName}}</view>
+                <view class="mp-cell-view">设备位置:{{allRepairerOrder.address_name}}</view>
+                <view class="mp-cell-view">报修时间:{{allRepairerOrder.appointTime}}</view>
+            </mp-cell>
+        </mp-cells>
+      </scroll-view>
+    </view>
 
+<!-- 
       <view class="page-section-spacing">
         <scroll-view scroll-y="true" style="height: 300rpx;" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
-          <view wx:for="{{orderList}}" wx:for-item="order" wx:key="order" data-id="{{order.id}}" bindtap="clickOrder">
+          <view wx:for="{{allRepairerOrder}}" wx:for-item="order" wx:key="order" data-id="{{order.id}}" bindtap="clickOrder">
             <view slot="title" style="position: relative;margin-right: 10px;">
               <image src="../../imgs/icon/to_be_confirmed.png" style="width: 50px; height: 50px; display: block" />
             </view>
@@ -173,10 +189,10 @@
           </view>
 
         </scroll-view>
-      </view>
+      </view> -->
 
       
-    </view> -->
+    </view>
 
   </view>
 
