--- a/page/home/pages/terminalUser/repairingOrderDetail/repairingOrderDetail.wxml
+++ b/page/home/pages/terminalUser/repairingOrderDetail/repairingOrderDetail.wxml
@@ -40,8 +40,8 @@
   <view class="ctnt2 placehold" hidden="{{currentNavtab==3 ? '' : true}}">
     <view class="page__bd">
       <mp-cells ext-class="my-cells">
-        <mp-cell value="单据状态" footer="{{}}"></mp-cell>
-        <mp-cell value="报修单号" footer="{{}}"></mp-cell>
+    <mp-cell value="报修单号" footer="{{orderInfo.id}}">{{orderInfo.id}}</mp-cell>
+      <mp-cell value="单据状态" footer="{{workOrderStatus[orderInfo.status]}}">{{workOrderStatus[orderInfo.status]}}</mp-cell>
         <mp-cell value="审核人" footer="{{}}"></mp-cell>
         <mp-cell value="审核意见" footer="{{}}"></mp-cell>
         <mp-cell value="维修人员" footer="{{}}"></mp-cell>
