--- a/page/home/index.wxml
+++ b/page/home/index.wxml
@@ -148,7 +148,7 @@
 
 
 
-    <view wx:if="{{allRepairerOrder != null}}" class="page-section">
+    <!-- <view wx:if="{{allRepairerOrder != null}}" class="page-section">
       <view class="kind-list-item-hd">
         <view class="kind-list-text">待办事项</view>
         <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部待办事项</navigator>
@@ -170,29 +170,8 @@
             </mp-cell>
         </mp-cells>
       </scroll-view>
-    </view>
-
-<!-- 
-      <view class="page-section-spacing">
-        <scroll-view scroll-y="true" style="height: 300rpx;" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
-          <view wx:for="{{allRepairerOrder}}" wx:for-item="order" wx:key="order" data-id="{{order.id}}" bindtap="clickOrder">
-            <view slot="title" style="position: relative;margin-right: 10px;">
-              <image src="../../imgs/icon/to_be_confirmed.png" style="width: 50px; height: 50px; display: block" />
-            </view>
-            <view>{{order.programName}}</view>
-            <view>{{order.deviceName}}</view>
-            <view style="font-size: 13px;color: #888888;">设备位置:{{order.malfunctionLoc}}</view>
-            <view style="font-size: 13px;color: #888888;">报修时间:{{order.malfunctionDate}}</view>
-          
-          <view class="page-body-line"></view>
-
-          </view>
-
-        </scroll-view>
-      </view> -->
-
+    </view> -->
       
-    </view>
 
   </view>
 
