--- a/page/home/index.wxml
+++ b/page/home/index.wxml
@@ -144,38 +144,36 @@
     </block>
 
     <!-- <block wx:else>登录查看更多信息</block> -->
-
-
-
-
-    <!-- <view wx:if="{{allRepairerOrder != null}}" class="page-section">
+ <!-- class="page-section" -->
+    <view wx:if="{{orderList != null}}" class="upcoming_view">
       <view class="kind-list-item-hd">
         <view class="kind-list-text">待办事项</view>
-        <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部待办事项</navigator>
-        <image class="kind-list-img" src="/imgs/icon/arrow.png"></image>
+        <!-- <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部待办事项</navigator> -->
+        <!-- <image class="kind-list-img" src="/imgs/icon/arrow.png"></image> -->
       </view>
 
       <view class="page-body-line"></view>
+
+      <view class="page">
         <view class="page__bd">
-      <scroll-view scroll-y="true" class="container discovery" >
-        <mp-cells>
-            <mp-cell wx:for="{{allRepairerOrder}}" wx:for-item="order" wx:key="order" data-id="{{allRepairerOrder.id}}" bindtap="clickOrder">
+          <!-- bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}" -->
+          <scroll-view scroll-y="true" class="container discovery">
+            <mp-cells>
+              <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="order" data-id="{{orderList.id}}" bindtap="clickOrder">
                 <view slot="title" class="mp-cell-title">
-                  <image src="../../../../../imgs/icon/to_be_confirmed.png" class="mp-cell-image"/>
+                  <image src="../../../../../imgs/icon/to_be_confirmed.png" class="mp-cell-image" />
                 </view>
-                <view>{{allRepairerOrder.programName}}</view>
-                <view>{{allRepairerOrder.deviceName}}</view>
-                <view class="mp-cell-view">设备位置:{{allRepairerOrder.address_name}}</view>
-                <view class="mp-cell-view">报修时间:{{allRepairerOrder.appointTime}}</view>
-            </mp-cell>
-        </mp-cells>
-      </scroll-view>
-    </view> -->
-      
+                <view>{{order.programName}}</view>
+                <view>{{order.deviceName}}</view>
+                <view class="mp-cell-view">设备位置:{{order.address_name}}</view>
+                <view class="mp-cell-view">报修时间:{{order.appointTime}}</view>
+              </mp-cell>
+            </mp-cells>
+          </scroll-view>
+        </view>
+      </view>
 
+    </view>
   </view>
-
-
-
 
 </view>
