--- a/app.wxss
+++ b/app.wxss
@@ -274,7 +274,7 @@ input {
 
 .userinfo {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   margin: 13rpx 13rpx;
 }
