--- a/page/common/head.wxml
+++ b/page/common/head.wxml
@@ -2,7 +2,7 @@
   <view class="userinfo">
     <view class="userinfo-avatar">
       <open-data type="userAvatarUrl" default-avatar="/imgs/icon/ananops.png"></open-data>
+      <!-- <open-data type="userNickName" class="userinfo-nickname"></open-data> -->
     </view>
-    <open-data type="userNickName" class="userinfo-nickname"></open-data>
   </view>
 </template>
