--- a/page/home/index.wxss
+++ b/page/home/index.wxss
@@ -1,4 +1,3 @@
-
 .m-menu {
   display: flex;
   flex-flow: row wrap;
@@ -31,21 +30,36 @@
   color: #333;
 }
 
-.kind-list-text{
+.kind-list-text {
   flex: 1;
   font-weight: 400;
 }
-.list-text{
+
+.list-text {
   font-size: 25rpx;
   font-weight: 250;
 }
+
 .kind-list-img {
   width: 60rpx;
   height: 60rpx;
 }
+
 .kind-list-item-hd {
   padding: 10rpx;
   display: flex;
   align-items: center;
-  transition: opacity .3s;
+  transition: opacity 0.3s;
+}
+
+.upcoming_view {
+  margin: 10rpx 21rpx 15rpx 21rpx;
+  background-color: #fff;
+  border-radius: 21rpx / 21rpx;
+}
+
+.page {
+  margin: 10rpx 21rpx 15rpx 21rpx;
+  background-color: #fff;
+  border-radius: 21rpx / 21rpx;
 }
