--- a/page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail.wxml
+++ b/page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail.wxml
@@ -77,4 +77,11 @@
         </mp-cells>
     </view>
   </view>
+  <view class="page-section">
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <button type="default" plain="true" bindtap="clickCancelInspection">取消巡检</button>
+        </view>
+      </view>
+  </view>
 </view>
