--- a/page/home/pages/serviceEngineer/inspectionItems/inspectionItems.wxml
+++ b/page/home/pages/serviceEngineer/inspectionItems/inspectionItems.wxml
@@ -8,12 +8,8 @@
                 </view>
                 <view>{{order.itemName}}</view>
                 <view>{{order.description}}</view>
-                <view style="font-size: 13px;color: #888888;">设备位置:{{order.malfunctionLoc}}</view>
+                <view style="font-size: 13px;color: #888888;">持续时长:{{order.days}}天</view>
                 <view style="font-size: 13px;color: #888888;">报修时间:{{order.scheduledStartTime}}</view>
-                <view style="font-size: 13px;color: #888888;">
-                  <button class="weui-btn mini-btn" type="default" size="mini" data-id="{{order.id}}" catchtap="clickNotAccept">驳回</button>
-                  <button class="weui-btn mini-btn" type="primary" size="mini" data-id="{{order.id}}" catchtap="clickAccept">完成</button>
-                </view>
             </mp-cell>
         </mp-cells>
       </scroll-view>
