--- a/app.wxss
+++ b/app.wxss
@@ -519,3 +519,22 @@ input {
   font-size: 30rpx;
   color: #888888;
 }
+
+.operation_view {
+  display: flex;
+  flex-flow: row-reverse wrap;
+  align-content: flex-start;
+  padding: 10rpx 10rpx 10rpx;
+  height: auto !important;
+  overflow: hidden;
+}
+
+.operation_button {
+  width: 120rpx;
+  border-radius: 38rpx;
+  border: 1rpx solid rgb(102, 102, 102);
+  color: grey;
+  background-color: white;
+  text-align: center;
+  margin: 5rpx;
+}
