--- a/page/home/pages/serviceEngineer/inspecting/inspecting.wxml
+++ b/page/home/pages/serviceEngineer/inspecting/inspecting.wxml
@@ -10,9 +10,9 @@
                 <view>{{order.description}}</view>
                 <view style="font-size: 13px;color: #888888;">设备位置:{{order.malfunctionLoc}}</view>
                 <view style="font-size: 13px;color: #888888;">报修时间:{{order.scheduledStartTime}}</view>
-                <view style="font-size: 13px;color: #888888;">
-                  <button class="weui-btn mini-btn" type="default" size="mini" data-id="{{order.id}}" catchtap="clickNotAccept">驳回</button>
-                  <button class="weui-btn mini-btn" type="primary" size="mini" data-id="{{order.id}}" catchtap="clickAccept">完成</button>
+                <view class="operation_view">
+                  <view class="operation_button" data-id="{{order.id}}" catchtap="clickAccept">完成</view>
+                  <view class="operation_button" data-id="{{order.id}}" catchtap="clickNotAccept">驳回</view>
                 </view>
             </mp-cell>
         </mp-cells>
